styles.css
html {
    font-family:
     'Gill Sans', 'Gill Sans MT', Calibri, 
     'Trebuchet MS', sans-serif;
     background-color: gray;
}

body {
    margin: 0;
}


/*Start nav bar*/
.nav-container {
    background-color: rgba(0, 0, 0, 0.85);
    position: fixed;
    top: 9px;
    width: 100%;
    margin: -8px -8px auto -8px;
    display: flex;
    justify-content: flex-end;
    height: 55px;
    z-index: 1;
}
@media (max-width: 600px) {
    .nav-container {
        min-height: 65px;
        height: auto;
        display: flex;
        flex-direction: row;
        align-items: center;
    }
}

.nav-container ul {
    display: flex;
    flex-direction: row;
    margin: 0 5px;
    width: 100%;
}
@media (max-width:600px) {
    .nav-container ul {
        display: flex;
        flex-direction: row;
        margin: 0 auto 4px;
        padding: 0;
    }
}
.nav-container ul li {
    display: flex;
    flex-direction: column;
    justify-content: center;
    border-style: solid;
    border-width: 1px;
    border-color: black;
    height: 20px;
    width: 20%;
    padding-top: 1px;
    padding-bottom: 1px;
}
.nav-container ul > li, a {
    margin: 0 1px;
    padding-top: 1em;
    padding-bottom: 1em;
    list-style: none;
    text-decoration: none;
    justify-content: center;
    text-align: center;
    color: white;
}
.nav-container ul li a:hover {
    background-color: rgba(245, 245, 245, 0.062);
    font-size: 110%;
    border-width: 2px;
    color: rgb(100, 167, 255);
    font-weight: 120%;
    
}
/*End nav bar*/
/*Start Welcome Section*/
header .welcome-section {
    background-image: url(./images/Soy\ Diego.jpg);
    background-size: cover;
    background-color: black;
    width: 100vw;
    padding-top: 15%;
    padding-bottom: 15%;

}
header img {
    width: 100vw;
    position: absolute;
}
header .welcome-section .aboutme {
    display: flex;
    flex-direction: column;
    color: white;
    line-height: 5px;
    position: relative;
    top: 3vw;
    margin-left: 3%;
    font-size: 2vw;
}
@media ( max-width: 600px) {
    header .welcome-section .aboutme {
        position: relative;
        top: 160px;
        font-size: 70%;
    }
}
/*End Welcome and about section*/
/*Start Projects*/
.projects {
    background-color: rgba(192, 192, 192, 0.575)5);
    position: relative;
    margin-top: 5%;
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    grid-auto-rows: auto auto auto 50px 1fr;
    grid-gap: 20px;
    grid-template-areas: 
    ". title ."
    "p1 p2 p3"
    "p4 p5 p6"
    ". btn ."
    "ftr ftr ftr";
}
@media ( max-width:600px ) {
    .projects {
        top: 350px;
        display: flex;
        flex-direction: column;
        margin: auto 2px;
        width: 94%;
    }
}
.projects-title {
    margin: 0 auto;
    width: 100%;
    display: inline;
    grid-area: title;
}
@media ( max-width:600px ) {
    .projects-title {
        width: 100%;
    }
    .projects-title h2 {
        text-align: center;
    }
}
.project1 {
    width: 100%;
    min-height: 200px;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.425);
    margin: 0 auto auto 10px;
    grid-area: p1;
    text-align: center;
}
.project1 img {
    width: 100%;
}
.project2 {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.377);
    margin: 0 auto auto 10px;
    grid-area: p2;
    text-align: center;
}
.project2 img {
    width: 100%;
}
.project3 {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.466);
    margin: 0 auto auto 10px;
    grid-area: p3;
    text-align: center;
}
.project3 img {
    width: 100%;
}
.project4 {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.493);
    margin: 0 auto auto 10px;
    grid-area: p4;
    text-align: center;
}
.project4 img {
    width: 100%;
}
.project5 {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.397);
    margin: 0 auto auto 10px;
    grid-area: p5;
    text-align: center;
}
.project6 {
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, 0.466);
    margin: 0 auto auto 10px;
    grid-area: p6;
    text-align: center;
}
@media ( max-width:600px ) {
    .project1, .project2, .project3,
    .project4, .project5,.project6 {
        margin-bottom: 10px;
    }
}
/*Show all button*/
.btn { 
    grid-area: btn;
    display: flex;
    justify-content: center;
}
.btn button {
    color: white;
    background-color: rgba(0, 0, 0, 0.192);
    height: 50px;
    width: 100px;
    border-width: 1px;
    border-radius: 2px;
    border-color: white;
    font-size: 20px;
}
/*Footer area*/
.ftr-container {
    background-color: black;
    color: white;
    grid-area: ftr;
    display: flex;
    flex-direction: column;
    align-items: center;
}
.ftr-container h2 {
    font-size: 4em;
    margin-bottom: 2px;
}
.ftr-container p {
    margin-top: 2px;
}
.ftr-container .social-media {
    background-color: rgba(12, 12, 12,);
    display: flex;
    flex-direction: row;
    font-size: 2.2vw;
    margin: 15px auto;
    height: 2em;
}
.ftr-container .social-media div {
    margin: 0 auto;
    padding: 2% 1% 2px 1%;
    background-color: rgb(12, 12, 12);
}
.ftr-container .social-media a:hover {
    background-color: rgba(245, 245, 245, 0.062);
    font-size: 110%;
    border-width: 2px;
    color: rgb(100, 167, 255);
    font-weight: 120%;
    padding: 0;
    margin: auto;
}

hr {
    border-color: rgba(255, 255, 255, 0.603);
    background-color: rgba(245, 245, 245, 0.39);
    height: 4px;
    width: 100%;
    border-width: 1px;
}
#cellphone {
    font-size: 0.7em;
}
@media ( max-width:600px ) {
    .ftr-container {
        background-color: black;
        color: white;
        display: flex;
        flex-direction: column;
        height: 100%;
        width: 100vw;
        margin: 0px;
        padding: 0;
    }
    .ftr-container h2 {
        font-size: 26px;
        margin-top: 10px;
    }
    .ftr-container .social-media {
        width: 90%;
        background-color: rgb(12, 12, 12);
        height: auto;
        margin: 0 auto;
        margin-left: 2%;
    }
 
}

